--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "apexcharts": "^3.33.2",
     "axios": "^0.19.0",
     "bootstrap": "^5.1.3",
+    "core-js": "^2.6.5",
+    "core-js-pure": "^3.22.0",
     "date-fns": "^2.28.0",
     "firebase": "^9.6.7",
     "material-ui-search-bar": "^1.0.0",
@@ -39,7 +41,7 @@
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^5.0.0",
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.1.2",
     "redux-form": "^8.2.6",
